Add Console Test Lab device bindings
